<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_user_type"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_30sdp"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/primary_text" />
        <ImageView
            android:id="@+id/passenger"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/passenger"
            android:contentDescription="@string/passenger"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_4sdp"/>
        <ImageView
            android:id="@+id/restaurateur"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/restaurant"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/restaurateur"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurateur"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_4sdp"/>
        <ImageView
            android:id="@+id/delivery_personnel"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/delivery"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/delivery_personnel"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_personnel"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_4sdp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>